Fix dark mode icon button visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,13 +41,13 @@ body {
   }
   /* Button hover in light mode */
   #dark-mode-toggle:hover {
-    background-color: white;
+    background-color: black;
   }
   
   /* Button style in dark mode */
   body.dark-mode #dark-mode-toggle {
     background-color: black;
-    color: black;
+    color: white;
   }
   
   /* Button hover in dark mode */
